--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
     "aos": "^2.3.4",
     "firebase": "^10.11.1",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.8",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.1.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.0",
     "react-tooltip": "^5.26.4",
     "sort-by": "^1.2.0",
